dconf-editor (3.20.1-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Sun, 17 Apr 2016 17:37:39 +0200

dconf-editor (3.18.2-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Thu, 12 Nov 2015 14:26:59 +0100

dconf-editor (3.18.1-1) unstable; urgency=medium

  * New upstream release.
    - Fixes a crash when a range was set without either a min or a max value.
      (Closes: #801618)

 -- Michael Biebl <biebl@debian.org>  Tue, 13 Oct 2015 15:14:42 +0200

dconf-editor (3.18.0-1) unstable; urgency=medium

  * New upstream release.
  * Update build-dependencies according to configure.ac changes:
    - bump valac to >= 0.25.1
    - bump libgtk-3-dev to >= 3.14.0

 -- Andreas Henriksson <andreas@fatal.se>  Fri, 25 Sep 2015 10:06:28 +0200

dconf-editor (3.16.1-1) unstable; urgency=medium

  * Upload to unstable.
  * New upstream release.
  * Point Vcs-* to the unstable branch.
  * Point Homepage to the dconf project wiki page.
  * Bump debhelper compatibility level to 9.
  * Fix debian/copyright to comply with version 1.0 of the spec.
  * Update Build-Depends as per configure.ac.

 -- Michael Biebl <biebl@debian.org>  Wed, 27 May 2015 01:59:42 +0200

dconf-editor (3.16.0-1) experimental; urgency=medium

  * Initial release.

 -- Iain Lane <laney@debian.org>  Mon, 13 Apr 2015 17:33:31 +0100